[compile server] Add new unsafe memory access warning VM options to the compile server #SCL-23766 fixed
- These are caused by our dependencies. As JDK 24+ becomes more widely used, these will be migrated.
- For now, many projects need these new VM options to not print scary-looking errors.